// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncGeneratorCall 1`] = `
Array [
  "{\\"error\\":{\\"code\\":-1,\\"message\\":\\"Iterator non-exist not found, next() failed.\\",\\"data\\":{\\"type\\":\\"E\\"}},\\"id\\":1,\\"jsonrpc\\":\\"2.0\\"}",
]
`;

exports[`AsyncGeneratorCall non strict 1`] = `Array []`;

exports[`Bad messages: Bad & non strict 1`] = `
Array [
  "{\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\",\\"data\\":{\\"stack\\":\\"\\",\\"type\\":\\"Error\\"}},\\"id\\":\\"id1\\",\\"jsonrpc\\":\\"2.0\\"}",
  "{\\"error\\":{\\"code\\":-32700,\\"message\\":\\"Parse error\\",\\"data\\":{\\"stack\\":\\"<mocked stack>\\",\\"type\\":\\"Error\\"}},\\"id\\":null,\\"jsonrpc\\":\\"2.0\\"}",
]
`;

exports[`Bad messages: Bad & strict 1`] = `
Array [
  "{\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\",\\"data\\":{\\"stack\\":\\"\\",\\"type\\":\\"Error\\"}},\\"id\\":\\"id0\\",\\"jsonrpc\\":\\"2.0\\"}",
  "{\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\",\\"data\\":{\\"stack\\":\\"\\",\\"type\\":\\"Error\\"}},\\"id\\":\\"id1\\",\\"jsonrpc\\":\\"2.0\\"}",
  "{\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\",\\"data\\":{\\"stack\\":\\"\\",\\"type\\":\\"Error\\"}},\\"id\\":null,\\"jsonrpc\\":\\"2.0\\"}",
  "{\\"error\\":{\\"code\\":-32700,\\"message\\":\\"Parse error\\",\\"data\\":{\\"stack\\":\\"<mocked stack>\\",\\"type\\":\\"Error\\"}},\\"id\\":null,\\"jsonrpc\\":\\"2.0\\"}",
]
`;

exports[`Batch messages 1`] = `
Array [
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":0,\\"result\\":1},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"result\\":1}]",
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"result\\":1},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"result\\":1}]",
]
`;
